# PackageDependency

./: .gitignore  README.md
Backend/go-dependency-resolver/: README.md  main.go
Backend/go-dependency-resolver/internal/db/: mongo.go
Backend/go-dependency-resolver/internal/models/: module.go
Backend/go-dependency-resolver/internal/resolver/: loadGraph.go
Crawler/cargo-dependency-crawler/: README.md
Crawler/go-dependency-crawler/internal/config/: config.go
Crawler/go-dependency-resolver/: go.mod
Crawler/go-dependency-resolver/internal/resolver/: buildlist.go
Crawler/js-dependency-crawler/: README.md
Crawler/js-dependency-crawler/crawler/: .dockerignore  Dockerfile  requirements.txt
Crawler/js-dependency-crawler/scripts/: docker_build.sh  docker_sync_official.sh
Crawler/maven-dependency-crawler/: README.md
Crawler/pip-dependency-crawler/: README.md  get_dep_information.py  main.py  model.py  setup_parse_dep.py
Frontend/go-dependency-crawler/: MetadataCrawl.go  go.mod  main.go  readme.md
Frontend/go-dependency-crawler/crawler/: exp_handler.go  parser.go
Frontend/go-dependency-crawler/db/: mongo.go
Frontend/maven-dependency-crawler/: README.md  pom.xml
Resolver/cargo-dependency-resolver/: README.md
Resolver/cargo-dependency-resolver/.cargo/: config.toml
Resolver/go-dependency-resolver/: README.md
Resolver/js-dependency-resolver/: CMakeLists.txt  README.md
Resolver/js-dependency-resolver/src/: CMakeLists.txt  can-place-dep.cpp  can-place-dep.hpp  config.hpp  dataset.cpp  dataset.hpp  edge.cpp  edge.hpp  exceptions.hpp  idealTree.cpp  idealTree.hpp  jsmap.hpp  main.cpp  node.cpp  node.hpp  place-dep.cpp  place-dep.hpp  semver.cpp  semver.hpp
Resolver/maven-dependency-crawler/: build.sh
Resolver/maven-dependency-resolver/: .gitignore  README.md
Resolver/pip-dependency-resolver/: README.md  main.py  model.py  pypi_wheel.py  requirements.txt
(+46 files in other folders)
